--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -64,6 +64,11 @@ a { font-family: inherit; color: inherit; }
 .badge-inverse {background-color: #333333;}
 .badge-inverse:hover {background-color: #1a1a1a;}
 
+.btnLien{
+    font-size: 18px;
+    padding: 4px 24px;
+}
+
 /* zonesRessource */
 .courseElems *{
     padding: 0;
@@ -148,10 +153,14 @@ a { font-family: inherit; color: inherit; }
     background: #e9e9e9;
     min-height: 150px !important;
     padding: 3px 6px !important;
+    display: flex;
+    flex-direction: column;
 }
 .formCol>.row{
     margin-left: 0;
     margin-right: 0;
+    margin-bottom: 2px;
+    flex: 1;
 }
 .LabelAdmin{
     font-weight: bold;
@@ -174,14 +183,6 @@ textarea{
 
 .textarea{
     background: #E8E8E8;
-}
-
-.formCol{
-    display: flex;
-    flex-direction: column;
-}
-.formCol .row{
-    flex: 1;
 }
 
 .sectionDrop{
@@ -313,4 +314,8 @@ textarea{
     padding: 5px;
     border-bottom: dashed #bbb 1px;
     margin: 0;
+}
+.detailIconTypeLien{
+    text-align: center;
+    font-size: 20px;
 }
