--- a/app/Resources/views/cours/adminLien.html.twig
+++ b/app/Resources/views/cours/adminLien.html.twig
@@ -1,5 +1,5 @@
 <li data-idZone="{{ zoneId }}"
-    data-idItem="{{ itemId }}"
+    data-idItem="{{ lien.id }}"
     class="courseElemAdmin lienAdmin col-md-12"
     data-typeItem="lien"
 >
@@ -18,17 +18,30 @@
     <div class="formCol col-md-11">
         <div class="row">
             <div class="LabelAdmin col-sm-2">Nom</div>
-            <input data-champName="nom" class="champAdmin col-sm-10 col-xs-12" value="{{ nom }}"/>
+            <input data-champName="nom" class="champAdmin col-sm-10 col-xs-12" value="{{ lien.nom }}"/>
         </div>
         <div class="row">
             <div class="LabelAdmin col-sm-2">Description</div>
             <div class="col-sm-10  col-xs-12">
-                <textarea data-champName="description" id="zone_{{ zoneId }}_lien_{{ itemId }}_descr" class="simpleEditor editor champAdmin">{{ description }}</textarea>
+                <textarea data-champName="description" id="zone_{{ zoneId }}_lien_{{ lien.id }}_descr" class="simpleEditor editor champAdmin">{{ lien.description }}</textarea>
             </div>
         </div>
         <div class="row">
             <div class="LabelAdmin col-sm-2">URL</div>
-            <input data-champName="url" class="champAdmin col-sm-10  col-xs-12" value="{{ url }}"/>
+            <input data-champName="url" class="champAdmin col-sm-10  col-xs-12" value="{{ lien.url }}"/>
+        </div>
+        <div class="row">
+            <div class="LabelAdmin col-sm-2">Type du lien</div>
+            <div class="detailIconTypeLien col-xs-1"><i class="fa {{ lien.typeLien.faIcon }}"></i></div>
+            <select class="col-sm-9  col-xs-11" title="Type du lien" data-champName="typeLien">
+                {% for key,val in lienTypes %}
+                    <option data-icon="{{ val.faIcon }}" value="{{ val.id }}"
+                    {% if val.id == lien.typeLien.id %}
+                        selected="selected"
+                    {% endif %}
+                    >{{ val.nom }}</option>
+                {% endfor %}
+            </select>
         </div>
     </div>
 </li>
