--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -161,7 +161,7 @@
                                                         </div>
                                                     </div>
                                                 </li>
-                                            {% elseif val.zones.type[keyR] == "free" %}
+                                            {% elseif val.zones.type[keyR] == "libre" %}
                                                 <!--
                                                         LIBRE
                                                 -->
