--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -106,6 +106,11 @@ a { font-family: inherit; color: inherit; }
     cursor: pointer;
     text-align: center;
     color: #fff;
+    font-family: "Montserrat",sans-serif;
+    font-size: 13px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
 .btnActionCol li, .btnAdmin{
     margin-bottom: 5px;
@@ -144,8 +149,7 @@ a { font-family: inherit; color: inherit; }
 }
 .inlineBtn{
     display: inline-block;
-    padding: 5px;
-    border-radius: 10px;
+    padding: 5px 8px;
 }
 
 .formCol{
@@ -164,6 +168,7 @@ a { font-family: inherit; color: inherit; }
 }
 .LabelAdmin{
     font-weight: bold;
+    line-height: 26px;
 }
 .champAdmin{
     padding: 1px 5px !important;
@@ -230,6 +235,40 @@ textarea{
     text-transform: uppercase;
 }
 
+/* popup ajout lien dans groupe */
+#btnNewLienInGroupeModal{
+    text-align: center;
+}
+[data-contentmodal=ajoutLienToGroupe] .bginverse{
+    padding: 2px;
+}
+.alertMustBeSet{
+    box-shadow: 1px 2px 5px 3px rgba(255, 0, 0, 0.7);
+}
+.couleurLabelOption, .typeLabelOption{
+    padding: 10px;
+    border-radius: 3px;
+    color: #fff;
+}
+.typeLabelOption{
+    color: #aaa;
+    font-size: 16px;
+}
+.typeLabelOption i{
+    font-size: 20px;
+}
+.MyBtnSelectPickeer{
+    background-color: #fff;
+    border: 2px solid #ccc;
+}
+.tableAddNewLienInGroup{
+    text-align: left;
+    width:100%;
+    margin-bottom: 10px;
+}
+.tableAddNewLienInGroup .bootstrap-select{
+    padding-left: 0;
+}
 
 /* Admin du cours*/
 /* sections */
